# rag-demo

./: .gitignore  pyproject.toml
rag_demo/: app.py  loader.py  partition_fenced.py
