[tool.poetry]
name = "rag-demo"
version = "0.1.0"
description = ""
authors = ["lkonstantinov"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.2.3"
firecrawl-py = "^1.4.0"
tqdm = "^4.66.5"
unstructured = {extras = ["md"], version = "^0.16.3"}
python-magic-bin = "^0.4.14"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rag = "rag_demo.app:main"
